infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: oscargm40/expiration-ticketing-k8s:latest
          # k create secret generic jwt-secret --from-literal=JWT_KEY=kubernetes   
          imagePullPolicy: Always
