infra/k8s/auth-depl+srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: oscargm40/auth-ticketing-k8s:latest
          #image: us.gcr.io/ticketing-dev-313817/... ..
          imagePullPolicy: Always  
---
apiVersion: v1         
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - name: auth
      protocol: TCP
      port: 3000  
      targetPort: 3000
