infra/k8s/client-depl+srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: oscargm40/client-ticketing-k8s:latest
          #image: us.gcr.io/ticketing-dev-313817/client #
          imagePullPolicy: Always
---
apiVersion: v1         
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 3000  
      targetPort: 3000
