infra/k8s/orders-depl+srv.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: oscargm40/orders-ticketing-k8s:latest
          # k create secret generic jwt-secret --from-literal=JWT_KEY=kubernetes   
          imagePullPolicy: Always  
---
apiVersion: v1         
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  type: ClusterIP
  ports:
    - name: orders
      protocol: TCP
      port: 3000  
      targetPort: 3000
