infra/k8s/payments-depl+srv.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: oscargm40/payments-ticketing-k8s:latest
          # k create secret generic jwt-secret --from-literal=JWT_KEY=kubernetes   
          imagePullPolicy: Always  
---
apiVersion: v1         
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  type: ClusterIP
  ports:
    - name: payments
      protocol: TCP
      port: 3000  
      targetPort: 3000
