infra/k8s/tickets-depl+srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: oscargm40/tickets-ticketing-k8s:latest
          # k create secret generic jwt-secret --from-literal=JWT_KEY=kubernetes   
          imagePullPolicy: Always  
---
apiVersion: v1         
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  type: ClusterIP
  ports:
    - name: tickets
      protocol: TCP
      port: 3000  
      targetPort: 3000
